--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/node": "^18.7.18",
     "vue": "^3.2.25"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
+    "dart-sass": "^1.25.0",
+    "sass": "^1.54.9",
+    "sass-loader": "^13.0.2",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
     "vue-tsc": "^0.29.8"
