--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "@types/node": "^18.7.18",
+    "axios": "^0.27.2",
+    "nprogress": "^0.2.0",
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^2.2.0",
     "dart-sass": "^1.25.0",
     "sass": "^1.54.9",
