--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/node": "^18.7.18",
+    "pinia": "^2.0.0-rc.10",
     "vue": "^3.2.25"
   },
   "devDependencies": {
