--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "dependencies": {
     "@types/node": "^18.7.18",
+    "axios": "^0.27.2",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.0-rc.10",
     "vue": "^3.2.25",
-    "vue-router": "4",
-    "axios": "^0.27.2",
-    "nprogress": "^0.2.0"
+    "vue-router": "4"
   },
   "devDependencies": {
     "@types/nprogress": "^0.2.0",
