--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/node": "^18.7.18",
+    "@typescript-eslint/parser": "^5.38.1",
     "axios": "^0.27.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.0-rc.10",
@@ -17,8 +18,14 @@
   },
   "devDependencies": {
     "@types/nprogress": "^0.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@vitejs/plugin-vue": "^2.2.0",
     "dart-sass": "^1.25.0",
+    "eslint": "^8.24.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.5.1",
+    "prettier": "^2.7.1",
     "sass": "^1.54.9",
     "sass-loader": "^13.0.2",
     "typescript": "^4.5.4",
